# callrx

./: .clippy.toml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  env-sample  release-please-config.json  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-please.yml  release.yml  update-homebrew.yml
man/: callrx.1
src/: api.rs  auth.rs  cache.rs  config.rs  display.rs  hyperlink.rs  main.rs
