[package]
name = "callrx"
version = "0.3.0"
edition = "2024"
authors = ["John Smith III"]
description = "A beautiful CLI tool for amateur radio callsign lookup via the FCC ULS database"
repository = "https://github.com/binarynoir/callrx"
license = "MIT"
keywords = ["ham-radio", "amateur-radio", "callsign", "fcc", "uls"]
categories = ["command-line-utilities"]

[[bin]]
name = "callrx"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "=4.6.1", features = ["derive", "color"] }

# HTTP client — sync, minimal dep tree, no edition2024 transitive deps
minreq = { version = "=2.14.1", features = ["https", "json-using-serde"] }

# JSON deserialization
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"

# Terminal output — colors, spinner (the table is rendered by hand in display.rs)
owo-colors = { version = "=4.3.0", features = ["supports-colors"] }
indicatif = "=0.18.4"
anstream = "=1.0.0"

# Error handling
color-eyre = "=0.6.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
